	(CygbuildCmdInstallCheckMain): Use `CygbuildCmdInstallCheckFSFaddress'.
	(CygbuildCmdReadmeFixMain): Completely rewritten.
	(CygbuildCmdFixFilesReadme): New.
	(CygbuildCmdFixFilesOther): New.
	(CygbuildCmdReadmeFixFile): Completely rewritten.
	(CygbuildCmdPerlModuleCall): Renamed. Was `CygbuildCmdReadmeFixFile'.
	(CygbuildCmdFixFilesOther): Convert to recursive search.
	(CygbuildCygcheckLibraryDepSource): Search for getopt.

2008-03-09  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install-after.sh.tmp: Document new arguments
	to program: PRG and VER.

	* bin/cygbuild.sh: (CygbuildGPGverify): Add to gpg call:
	--no-permission-warning --no-secmem-warning --no-mdc-warning
	(CygbuildCmdConfMain): Remove option -r from autoconf call.
	No such options exists.
	(CygbuildDefineVersionVariables): check for disk read error.
	(CygbuildCmdInstallMain): Send PKG and VER to install-after.sh
	(CygbuildBootVariablesGlobalMain): Add to config.guess, config.sub
	`cygbuild_opt_exclude_cache_files'.
	(CygbuildPatchApplyRun): Make sure patch target files are writable.

2008-03-08  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::TROUBLESHOOTING). Add
	section `Porting and Python os.rename'.
	(PACKAGE MAINTENANCE COMMANDS::Other commands): Remove
	command [shadow].
	(OPTIONAL EXTERNAL FILES): Rephrase initial paragraph.

	* bin/cygbuild.sh:
	(CygbuildInstallFixDocdirInstall): Ensure that target directory for
	tar move exists.
	(CygbuildInstallFixFileExtensions): check documentation for
	filenames.
	(CygbuildIsCygwin): New.
	(CygbuildIsLinux): New.
	(CygbuildCygcheckLibraryDepSource): Rewrite logic. Detect SMTPSERVER
	(CygbuildFindDo): Exclude version control directories.
	(CygbuildTreeSymlinkCopy): Use `CygbuildFindDo'.
	(CygbuildInstallPackageInfo): Use `CygbuildFindDo'.
	(CygbuildTarDirectory): Simplify `status' check.
	(CygbuildPatchApplyRun): Use `CygbuildIsCygwin' to check if
	--binary option is needed.