@@ -45,7 +45,7 @@ CYGBUILD_HOMEPAGE_URL="http://freshmeat.net/projects/cygbuild"
 CYGBUILD_NAME="cygbuild"
 
 #  Automatically updated by developer's Emacs config upon C-x C-s (save cmd)
-CYGBUILD_VERSION="2008.0311.1344"
+CYGBUILD_VERSION="2008.0311.1412"
 
 #  Used by the 'cygsrc' command to download official Cygwin packages
 #  http://cygwin.com/packages
@@ -1867,7 +1867,7 @@ CygbuildCygcheckLibraryDepSource()
     : > $retval.1
 
     [ -s $retval ] &&
-	$EGREP --line-number \
+	$EGREP --line-number --with-filename \
 	"^[^/]*exec[a-z]* *\(|getopt" \
 	$(< $retval) >> $retval.1
 
@@ -1880,7 +1880,7 @@ CygbuildCygcheckLibraryDepSource()
 	> $retval
 
     [ -s $retval ] &&
-	$EGREP --line-number \
+	$EGREP --line-number --with-filename \
 	    "^[^#]*(\<exec\>|SMTPSERVER|SMTP_SERVER|<\sendmail\>)" \
 	    $(< $retval) >> $retval.1
 
@@ -1889,7 +1889,7 @@ CygbuildCygcheckLibraryDepSource()
 	cat $retval.1
     fi
 
-    if	$EGREP --line-number \
+    if	$EGREP --line-number --with-filename \
 	    '^[^#]*\<os[a-z]*\.rename' \
 	    $(< $retval) > $retval.2
     then
